<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.synditcorp</groupId>
  <artifactId>ruleengine</artifactId>
  <version>2.0</version>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
           <source>1.8</source>
          <target>1.8</target>
          <release>1.8</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
 <dependencies>
  	<dependency>
  		<groupId>com.fasterxml.jackson.core</groupId>
  		<artifactId>jackson-databind</artifactId>
  		<version>2.5.1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.mvel</groupId>
  		<artifactId>mvel2</artifactId>
  		<version>2.4.13.Final</version>
  	</dependency>
  	<dependency>
  		<groupId>org.slf4j</groupId>
  		<artifactId>slf4j-simple</artifactId>
  		<version>1.7.25</version>
  	</dependency>
 </dependencies>
</project>